# applydir

./: README.md  config.yaml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
docs/: CHANGELOG.md  applydir_class_design.md  applydir_class_design_20250718.md  applydir_class_design_20250815.md  applydir_design_overview.md  applydir_design_overview_20250717.md  applydir_design_overview_20250815.md
src/applydir/: __init__.py  applydir.py  applydir_applicator.py  applydir_changes.py  applydir_distance.py  applydir_error.py  applydir_file_change.py  applydir_format_description.py  applydir_matcher.py  applydir_result.py  config.py  config.yaml  file_for_applydir.py  main.py  prepdir_applicator.py
tests/: test_applydir.py  test_applydir_applicator.py  test_applydir_changes.py  test_applydir_distance.py  test_applydir_error.py  test_applydir_file_change.py  test_applydir_format_description.py  test_applydir_matcher.py  test_main.py  test_prepdir_applicator.py
