[project]
name = "applydir"
version = "0.2.0"
description = "Utility to apply changes to files based on AI-generated recommendations."
readme = "README.md"
authors = [
    {name = "eyecantell", email = "paul@pneuma.solutions"},
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Topic :: Text Processing :: Markup",
    "Development Status :: 4 - Beta",
]
keywords = [
    "prepdir"
]
requires-python = ">=3.9"
dependencies = [
    "typing-extensions>=4.7.1; python_version < '3.11'",
    "importlib-resources>=5.0; python_version < '3.9'",
    "pyyaml>=6.0",
    "dynaconf>=3.2.6",
    "prepdir>=0.17.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "coverage>=7.2.7",
]

[project.scripts]
applydir = "applydir.main:main"

[project.urls]
Repository = "https://github.com/eyecantell/applydir"
Issues = "https://github.com/eyecantell/applydir/issues"
Documentation = "https://github.com/eyecantell/applydir#readme"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
package-dir = "src"
includes = ["src/applydir", "src/applydir/config.yaml"]

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.4",
    "pytest-cov>=6.1.0",
    "coverage>=7.2.7",
]
dev = [
    "build>=1.2.2",
    "twine>=5.1.1",
    "ruff>=0.7.0",
    "GitPython>=3.1.43",
]

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501", # Line length handled by ruff formatter
]